# github-zip

./: .env.template  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.copilot/: README.md
.github/: CONTRIBUTING.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: api.md  configuration.md
scripts/: dev_setup.sh  quick_backup.py  setup.py
src/github_backup/: __init__.py  backup_manager.py  cli.py  dropbox_client.py  github_client.py
tests/: test_backup_manager.py  test_github_client.py
